# QuickQuiz

./: .gitignore  README.md  package.json
backend/: pyproject.toml
backend/QuickQuiz/: build.sh  manage.py  pyproject.toml  requirements.txt
backend/QuickQuiz/QuickQuiz/: asgi.py  deployment_settings.py  settings.py  urls.py  wsgi.py
backend/QuickQuiz/apis/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
backend/QuickQuiz/apis/migrations/: 0001_initial.py  0002_uploadedfile.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  config.js  index.css  main.jsx
frontend/src/api/: apiClient.js
frontend/src/components/: Layout.jsx  LogoutButton.jsx
frontend/src/components/Quiz/: Quiz.jsx
frontend/src/components/logo/: Logo.jsx  logo.css
frontend/src/pages/: Login.jsx  OTPSent.css  OTPSent.jsx  Quiz.css  Quiz.jsx  QuizSetup.jsx  ResetPassword.jsx  Signup.css  Signup.jsx  UploadScreen.css  UploadScreen.jsx  login.css  test.jsx
quick-quiz-frontend/: index.html  package-lock.json  package.json
quick-quiz-frontend/src/: App.jsx  index.css
quick-quiz-frontend/src/assets/: data.js
quick-quiz-frontend/src/components/Quiz/: Quiz.css
